# tiledgame

./: CMakeLists.txt  LICENCE  README.md
include/: Vector.hh  Window.hpp  batch_renderer.hpp  defs.hh  font.hpp  game.hpp  input.hpp  render_texture2d.hpp  renderables.hpp  shader.hpp  shader_compiler.hpp  texture2d.hpp
src/: Window.cpp  batch_renderer.cpp  defaults.cc  font.cpp  input.cpp  main.cpp  render_texture2d.cpp  renderables.cpp  shader.cpp  shader_compiler.cpp  texture2d.cpp
